--- a/style.css
+++ b/style.css
@@ -7,9 +7,15 @@
 body {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: calibri;
+}
+
+h2 {
+    margin-bottom: 20px;
+    color: gray;
 }
 
 .container {
@@ -54,6 +60,9 @@ body {
 }
 
 @media screen and (max-width: 500px){
+    .container {
+        width: 100%;
+    }
     .sub_sec_div {
         flex-direction: column;
     }
